fix: style overlapping issues in emmet hints

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -727,6 +727,10 @@ a:focus {
   }
 }
 
+.emmet-hint {
+    margin-right: 48px !important;
+}
+
 .emmet-code-hint {
     position: absolute;
     font-size: 0.85em;
